2011-07-01 yusei
* Set proper title to interaction workflows.

2011-06-22 yusei
* Fix a bug. Quantity unit field on production order line must always be displayed.

2011-06-22 yusei
* Fix material consumption tab. Sort result as user can easily understand.

2011-06-22 yusei
* Fix bug on production order material consumption tab.

2011-06-15 yusei
* production order movement may not have specialise category value.

2011-06-07 yusei
* Stop displaying non-dated production order in planning box. It is useless.

2011-06-02 arnaud.fontaine
* Fix quantity unit conversion on ProductionOrder_viewMaterialConsumption.

2011-06-01 arnaud.fontaine
* Fix ProductionOrder_viewMaterialConsumption and display materials even when not in the inventory.

2011-05-23 tatuya
* Fix the issue that the Stock view on Production Order does not show anything.

2011-04-14 yusei
* Remove old unnecessary tales expression from relation string fields.

2010-11-05 yusei
* Modify variation category list in the field library and stop showing base category name.

2010-10-09 yusei
* Fix a typo in production_order_workflow/scripts/Order_buildPackingList.

2010-05-24 kazuhiko
* Improve activity dependencies for Delivery_updateAppliedRule, eg. delivery.activate(tag='(path)_updateAppliedRule', after_tag='(path)_expand').Delivery_updateAppliedRule(activate_kw={'tag':'(path)_expand'})

2010-03-02 yusei
* Remove short title.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2008-09-16 Kazuhiko
* revise production_packing_list_builder and production_report_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Production Packing List and Production Report.

2008-07-18 luke
* bugfix release 1.0rc2 - delete all production_order_* selections from system after updating

2008-07-10 luke
* production planning using planning box

2008-07-07 luke
* added material and service consumption views

2008-07-01 luke