@@ -1,3 +1,6 @@
+2011-08-30 tatuya
+* Fix to show quantity unit title in the listbox of the Stock tab.
+
 2011-07-01 yusei
 * Set proper title to interaction workflows.
 
